[tmux] Add mapping to open new window in dotfiles and add note for every custom mapping

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,15 @@
 # Tentar usar isso aqui?
 # https://www.youtube.com/watch?v=l_TTxc0AcCw
 
+# Run tmux list-keys to get a list of all bindings.
+# Also, the command customize-mode can show a bunch of things.
+
 # prefix + C-l clears screen. Useful because I remapped C-l to move around panes
-bind C-l send-keys 'C-l'
+bind -N 'Enviar teclas C-l sem que sejam capturadas pelo próprio tmux' C-l send-keys 'C-l'
 # Por que não fazer pro resto?
-bind C-h send-keys 'C-h'
-bind C-j send-keys 'C-j'
-bind C-k send-keys 'C-k'
+bind -N 'Enviar teclas C-h sem que sejam capturadas pelo próprio tmux' C-h send-keys 'C-h'
+bind -N 'Enviar teclas C-j sem que sejam capturadas pelo próprio tmux' C-j send-keys 'C-j'
+bind -N 'Enviar teclas C-k sem que sejam capturadas pelo próprio tmux' C-k send-keys 'C-k'
 
 # Pro esc não ficar lerdo dentro do nvim dentro do tmux
 # https://github.com/neovim/neovim/issues/2035
@@ -19,8 +22,8 @@ set -g display-panes-time 4000
 # Dividir os painéis
 unbind '"'
 unbind %
-bind s split-window -v -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
+bind -N 'Abrir um painel vertical' s split-window -v -c "#{pane_current_path}"
+bind -N 'Abrir um painel horizontal' v split-window -h -c "#{pane_current_path}"
 
 # Histórico grandão
 set -g history-limit 10000
@@ -30,10 +33,15 @@ set -g set-titles on
 set -g set-titles-string "#{window_name}" ##{pane_current_path} não atualiza enquanto eu mudo de diretório... ):<
 
 # Começar uma janela nova no mesmo diretório
-bind c new-window -c "#{pane_current_path}"
+bind -N 'Abre uma janela nova mantendo o mesmo diretório atual' c new-window -c "#{pane_current_path}"
+
+# Começar uma janela nova nos dotfiles
+# This is the original keybinding of prefix + capital C: "customize-mode -Z", whatever that is
+# bind-key    -T prefix       C                    customize-mode -Z
+bind -N 'Abre uma janela nova no diretório ~/dotfiles' C new-window -c "~/dotfiles"
 
 # Atalho para carregar as configurações (recarregar, reload, refresh)
-bind r source-file ~/.config/tmux/tmux.conf
+bind -N 'Reaplica as configs em ~/.config/tmux/tmux.conf' r source-file ~/.config/tmux/tmux.conf
 
 ############
 # Ignores tmux map when running vim, nvim or fzf. This means that inside these
@@ -43,10 +51,10 @@ bind r source-file ~/.config/tmux/tmux.conf
 # In the case of fzf, the navigation can be done with C-p and C-n, so I think
 # this map might actually be a bad thing, but since I never use fzf, I'll never
 # really know.
-bind -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
-bind -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
-bind -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
-bind -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
+bind -N 'Envia as teclas C-h, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
+bind -N 'Envia as teclas C-j, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
+bind -N 'Envia as teclas C-k, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
+bind -N 'Envia as teclas C-l, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
 # I want to specifically match nvim but NOT vim. This is because I run barebones
 # vim without plugins nor keymaps, so I want to be able to navigate out of a
 # tmux pane with vim running. If I wanted to match on both vim and nvim, the
@@ -56,14 +64,16 @@ bind -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\
 # Cancel selection with C-c without quitting vim mode, but still
 # be able to quit vim mode with C-c when nothing is selected
 # https://stackoverflow.com/questions/47848463/tmux-variable-indicating-whether-text-is-selected
-bind -T copy-mode-vi C-c if-shell -F '#{selection_present}' \
-                                     'send-keys -X clear-selection' \
-                                     'send-keys -X cancel'
+bind -N 'Sair da seleção sem sair do modo de cópia estilo vim' \
+       -T copy-mode-vi C-c \
+       if-shell -F '#{selection_present}' \
+       'send-keys -X clear-selection' \
+       'send-keys -X cancel'
 
-bind -n S-Left resize-pane -L
-bind -n S-Right resize-pane -R
-bind -n S-Up resize-pane -U
-bind -n S-Down resize-pane -D
+bind -N 'Redimensionar painéis (esquerda)' -n S-Left resize-pane -L
+bind -N 'Redimensionar painéis (direita)' -n S-Right resize-pane -R
+bind -N 'Redimensionar painéis (cima)' -n S-Up resize-pane -U
+bind -N 'Redimensionar painéis (baixo)' -n S-Down resize-pane -D
 
 # Não renomear as sessões automaticamente
 set -g allow-rename off
@@ -100,9 +110,9 @@ set -g mouse on
 # https://www.rockyourcode.com/copy-and-paste-in-tmux/
 setw -g mode-keys vi
 # v começa a selecionar
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -N 'Começa a selecionar' -T copy-mode-vi v send-keys -X begin-selection
 # Control + v seleciona em blocos
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -N 'Começa a selecionar em bloco' -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Pra copiar ainda é Enter e pra colar, prefixo + ]
 
 # https://superuser.com/questions/310251/use-terminal-scrollbar-with-tmux?lq=1
