[alacritty] Change order of hints alphabet (although I don't think it uses the special characters in hints anyways?), double quotes to single quotes and normalize colorscheme HEX codes to use only capital letters

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -9,6 +9,6 @@
 # Idea: Create templates with env vars and use envsubst to create the real
 # config files with the variables values.
 import = [
-  "~/.config/alacritty/base.toml",
-  "~/.config/alacritty/local.toml",
+  '~/.config/alacritty/base.toml',
+  '~/.config/alacritty/local.toml',
 ]
