[tmux] Add color change when prefix pressed to status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -84,7 +84,8 @@ set -g allow-rename off
 set -g default-terminal "tmux-256color"
 
 # Status bar lá embaixo
-set -g status-style 'bg=#606060 fg=#d6d6d6'
+# Muda de cor quando aperta o prefixo
+set -g status-style 'bg=#{?client_prefix,#808080,#606060} fg=#{?client_prefix,#e0e0e0,#d6d6d6}'
 set -g window-status-current-style 'bg=terminal fg=terminal'
 set -g message-style 'bg=#fcba03 fg=#000000'
 
