[tmux] Update some comments in tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,21 +44,29 @@ bind -N 'Abre uma janela nova no diretório ~/dotfiles' C new-window -c "~/dotfi
 bind -N 'Reaplica as configs em ~/.config/tmux/tmux.conf' r source-file ~/.config/tmux/tmux.conf
 
 ############
-# Ignores tmux map when running vim, nvim or fzf. This means that inside these
-# programs, the following mappings will be ignored, and the default nvim/vim/fzf
-# C-j will be executed, for instance. Used as "smart pane switching" when on vim
-# (aware of vim splits) or to navigate up and down in fzf.
-# In the case of fzf, the navigation can be done with C-p and C-n, so I think
-# this map might actually be a bad thing, but since I never use fzf, I'll never
-# really know.
-bind -N 'Envia as teclas C-h, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
-bind -N 'Envia as teclas C-j, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
-bind -N 'Envia as teclas C-k, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
-bind -N 'Envia as teclas C-l, ignorando mapeamentos do tmux, quando o programa for vim, nvim ou fzf' -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
+# Ignores tmux map when running nvim. This means that inside nvim, the following
+# mappings will be ignored, and the default nvim C-j will be executed. Used as
+# "smart pane switching" when on nvim (aware of nvim splits).
 # I want to specifically match nvim but NOT vim. This is because I run barebones
 # vim without plugins nor keymaps, so I want to be able to navigate out of a
 # tmux pane with vim running. If I wanted to match on both vim and nvim, the
-# regex could be like this: ^n\?vim$
+# regex could be like this: ^n\?vim$.
+# This is also the reason why I removed fzf from this grep. Since I can also use
+# C-n/p to navigate fzf selection, I'll leave C-j/k to switch tmux pane.
+# Also, when fzf is invoked from inside functions, the pane_current_command
+# would show zsh anyways, so this would not work when invoking fzf from inside a
+# function anyways.
+# So the old grep pattern, "^\(nvim\|fzf\)$" is now just ^nvim$.
+# bind -N 'Envia as teclas C-h, ignorando mapeamentos do tmux quando o programa for nvim' -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^nvim$" && tmux send-keys C-h) || tmux select-pane -L'
+# bind -N 'Envia as teclas C-j, ignorando mapeamentos do tmux quando o programa for nvim' -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^nvim$" && tmux send-keys C-j) || tmux select-pane -D'
+# bind -N 'Envia as teclas C-k, ignorando mapeamentos do tmux quando o programa for nvim' -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^nvim$" && tmux send-keys C-k) || tmux select-pane -U'
+# bind -N 'Envia as teclas C-l, ignorando mapeamentos do tmux quando o programa for nvim' -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^nvim$" && tmux send-keys C-l) || tmux select-pane -R'
+
+# W/e all that, adding fzf again 🤓
+bind -N 'Envia as teclas C-h, ignorando mapeamentos do tmux quando o programa for nvim' -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
+bind -N 'Envia as teclas C-j, ignorando mapeamentos do tmux quando o programa for nvim' -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
+bind -N 'Envia as teclas C-k, ignorando mapeamentos do tmux quando o programa for nvim' -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
+bind -N 'Envia as teclas C-l, ignorando mapeamentos do tmux quando o programa for nvim' -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
 ############
 
 # Cancel selection with C-c without quitting vim mode, but still
