[tmux] Remove unused bind, change all bind-keys to binds and add new mappings in copy-mode
New mappings in copy-mode:
- C-j also goes down
- C-k also goes up
- H goes to the start of the line considering
  characters, and not whitespaces
  (uses ^, and not 0)
- L goes to the end of the line (using $)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,7 +37,7 @@ bind -N 'Abre uma janela nova mantendo o mesmo diretório atual' c new-window -c
 
 # Começar uma janela nova nos dotfiles
 # This is the original keybinding of prefix + capital C: "customize-mode -Z", whatever that is
-# bind-key    -T prefix       C                    customize-mode -Z
+# bind    -T prefix       C                    customize-mode -Z
 bind -N 'Abre uma janela nova no diretório ~/dotfiles' C new-window -c "~/dotfiles"
 
 # Atalho para carregar as configurações (recarregar, reload, refresh)
@@ -53,9 +53,11 @@ bind -N 'Reaplica as configs em ~/.config/tmux/tmux.conf' r source-file ~/.confi
 # regex could be like this: ^n\?vim$.
 # This is also the reason why I removed fzf from this grep. Since I can also use
 # C-n/p to navigate fzf selection, I'll leave C-j/k to switch tmux pane.
-# Also, when fzf is invoked from inside functions, the pane_current_command
-# would show zsh anyways, so this would not work when invoking fzf from inside a
-# function anyways.
+
+# >>> Also, when fzf is invoked from inside functions, the pane_current_command
+# would show zsh, so this would not work when invoking fzf from inside a
+# function anyways. <<<
+
 # So the old grep pattern, "^\(nvim\|fzf\)$" is now just ^nvim$.
 # bind -N 'Envia as teclas C-h, ignorando mapeamentos do tmux quando o programa for nvim' -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^nvim$" && tmux send-keys C-h) || tmux select-pane -L'
 # bind -N 'Envia as teclas C-j, ignorando mapeamentos do tmux quando o programa for nvim' -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^nvim$" && tmux send-keys C-j) || tmux select-pane -D'
@@ -63,10 +65,10 @@ bind -N 'Reaplica as configs em ~/.config/tmux/tmux.conf' r source-file ~/.confi
 # bind -N 'Envia as teclas C-l, ignorando mapeamentos do tmux quando o programa for nvim' -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^nvim$" && tmux send-keys C-l) || tmux select-pane -R'
 
 # W/e all that, adding fzf again 🤓
-bind -N 'Envia as teclas C-h, ignorando mapeamentos do tmux quando o programa for nvim' -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
-bind -N 'Envia as teclas C-j, ignorando mapeamentos do tmux quando o programa for nvim' -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
-bind -N 'Envia as teclas C-k, ignorando mapeamentos do tmux quando o programa for nvim' -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
-bind -N 'Envia as teclas C-l, ignorando mapeamentos do tmux quando o programa for nvim' -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
+bind -N 'Envia as teclas C-h, ignorando mapeamentos do tmux quando o programa for nvim ou fzf' -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
+bind -N 'Envia as teclas C-j, ignorando mapeamentos do tmux quando o programa for nvim ou fzf' -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
+bind -N 'Envia as teclas C-k, ignorando mapeamentos do tmux quando o programa for nvim ou fzf' -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
+bind -N 'Envia as teclas C-l, ignorando mapeamentos do tmux quando o programa for nvim ou fzf' -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
 ############
 
 # Cancel selection with C-c without quitting vim mode, but still
@@ -77,6 +79,20 @@ bind -N 'Sair da seleção sem sair do modo de cópia estilo vim' \
        if-shell -F '#{selection_present}' \
        'send-keys -X clear-selection' \
        'send-keys -X cancel'
+
+bind -N 'Ir para baixo com C-j também' \
+      -T copy-mode-vi C-j \
+      'send-keys j'
+bind -N 'Ir para cima com C-k também' \
+      -T copy-mode-vi C-k \
+      'send-keys k'
+
+bind -N 'Ir para o começo da linha com H no copy-mode-vi' \
+      -T copy-mode-vi H \
+      'send-keys ^'
+bind -N 'Ir para o final da linha com L no copy-mode-vi' \
+      -T copy-mode-vi L \
+      'send-keys "$"'
 
 bind -N 'Redimensionar painéis (esquerda)' -n S-Left resize-pane -L
 bind -N 'Redimensionar painéis (direita)' -n S-Right resize-pane -R
@@ -119,23 +135,22 @@ set -g mouse on
 # https://www.rockyourcode.com/copy-and-paste-in-tmux/
 setw -g mode-keys vi
 # v começa a selecionar
-bind-key -N 'Começa a selecionar' -T copy-mode-vi v send-keys -X begin-selection
+bind -N 'Começa a selecionar' -T copy-mode-vi v send-keys -X begin-selection
 # Control + v seleciona em blocos
-bind-key -N 'Começa a selecionar em bloco' -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind -N 'Começa a selecionar em bloco' -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Pra copiar ainda é Enter e pra colar, prefixo + ]
-
-# https://superuser.com/questions/310251/use-terminal-scrollbar-with-tmux?lq=1
-# set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
 
 # checkhealth do nvim mandou por isso aqui:
 set-option focus-events on
-set -ga terminal-overrides ',xterm-256color:Tc'
+# set -ga terminal-overrides ',xterm-256color:Tc'
 # Com esse outro "terminal-overrides", control + esquerda/direita passou a gerar
 # as sequências 5D e 5C, ao invés das antigas ;5D e ;5C, e por isso tive que
 # fazer binds novos no zshrc
+# https://dev.to/terkwood/fast-scrolling-with-tmux-and-alacritty-3dmn
+set -ga terminal-overrides ',xterm-256color:Tc:smcup@:rmcup@'
 
 # I have never, once, used this
-# bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
+# bind -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
 
 # If both XDG_CONFIG_HOME and HOME/.config exists,
 # it only sources the XDG_CONFIG_HOME one.
