[tmux] Add color to tmux status when in copy mode ("pane_in_mode", whatever that is)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -109,7 +109,16 @@ set -g default-terminal "tmux-256color"
 
 # Status bar lá embaixo
 # Muda de cor quando aperta o prefixo
-set -g status-style 'bg=#{?client_prefix,#808080,#606060} fg=#{?client_prefix,#e0e0e0,#d6d6d6}'
+# set -g status-style 'bg=#{?client_prefix,#808080,#606060} fg=#{?client_prefix,#e0e0e0,#d6d6d6}'
+# Mudar de cor quando "pane_in_mode".
+# No modo cópia muda,
+# não sei se tem outros modos também.
+set -g status-style \
+  '\
+  bg=#{?pane_in_mode,#d0b37b,#{?client_prefix,#808080,#606060}} \
+  fg=#{?pane_in_mode,#1b1c1f,#{?client_prefix,#e0e0e0,#d6d6d6}} \
+  '
+
 set -g window-status-current-style 'bg=terminal fg=terminal'
 set -g message-style 'bg=#fcba03 fg=#000000'
 
