[git] Add commented lines of git pull with rebase and rebase auto stash to example git config file

--- a/EXAMPLE-FILES/git/config
+++ b/EXAMPLE-FILES/git/config
@@ -16,4 +16,10 @@
 [commit]
   verbose = true
 [push]
+  ; https://github.com/tjdevries/config_manager/blob/master/xdg_config/git/config
+  ; https://www.eficode.com/blog/git-autostash
   default = current
+; [pull]
+;   rebase = true
+; [rebase]
+;   autoStash = true
