[alacritty] Update alacritty config to use general.import instead of just deprecated import

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,7 +8,7 @@
 
 # Idea: Create templates with env vars and use envsubst to create the real
 # config files with the variables values.
-import = [
+general.import = [
   '~/.config/alacritty/base.toml',
   '~/.config/alacritty/local.toml',
 ]
