--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -110,13 +110,12 @@ set -g default-terminal "tmux-256color"
 # Status bar lá embaixo
 # Muda de cor quando aperta o prefixo
 # set -g status-style 'bg=#{?client_prefix,#808080,#606060} fg=#{?client_prefix,#e0e0e0,#d6d6d6}'
-# Mudar de cor quando "pane_in_mode".
-# No modo cópia muda,
-# não sei se tem outros modos também.
+# Mudar de cor quando "pane_in_mode". No modo cópia muda, não sei se tem outros modos também.
+# Mudar a cor quando "window_zoomed_flag": com zoom
 set -g status-style \
   '\
-  bg=#{?pane_in_mode,#d0b37b,#{?client_prefix,#808080,#606060}} \
-  fg=#{?pane_in_mode,#1b1c1f,#{?client_prefix,#e0e0e0,#d6d6d6}} \
+  bg=#{?pane_in_mode,#d0b37b,#{?window_zoomed_flag,#ed647d,#{?client_prefix,#808080,#606060}}} \
+  fg=#{?pane_in_mode,#1b1c1f,#{?window_zoomed_flag,#1b1c1f,#{?client_prefix,#e0e0e0,#d6d6d6}}} \
   '
 
 set -g window-status-current-style 'bg=terminal fg=terminal'
